# software-design

./: .clang-format  .clang-tidy  .clangd  .cmake-format.yaml  .editorconfig  .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yaml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  compile_commands.json  mkdocs.yml  question.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
docs/: changelog.md  index.md
docs/api/: data-models.md  managers.md  signals-slots.md
docs/architecture/: core-modules.md  overview.md  ui-components.md
docs/development/: code-style.md  contributing.md  environment.md
docs/getting-started/: installation.md  packaging.md  usage.md
package/data/: cards.json
package/data/records/: C001.json
scripts/: check_copyright.py  check_todos.py  format_all.py  package_mingw.ps1
src/: main.cpp
src/controller/: AuthController.cpp  AuthController.h  CardController.cpp  CardController.h  MainController.cpp  MainController.h  RecordController.cpp  RecordController.h
src/core/: AuthManager.cpp  AuthManager.h  Card.cpp  Card.h  CardManager.cpp  CardManager.h  Record.cpp  Record.h  RecordManager.cpp  RecordManager.h  StorageManager.cpp  StorageManager.h  Types.h  User.cpp  User.h
src/model/: Types.h
src/model/entities/: Card.cpp  Card.h  Record.cpp  Record.h  User.cpp  User.h
src/model/repositories/: StorageManager.cpp  StorageManager.h
src/model/services/: AuthService.cpp  AuthService.h  CardService.cpp  CardService.h  RecordService.cpp  RecordService.h
src/ui/: AdminDashboard.cpp  AdminDashboard.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  RechargeDialog.cpp  RechargeDialog.h  RecordTableWidget.cpp  RecordTableWidget.h  RegisterDialog.cpp  RegisterDialog.h  StatisticsWidget.cpp  StatisticsWidget.h  StudentDashboard.cpp  StudentDashboard.h
src/view/: MainWindow.cpp  MainWindow.h
src/view/dialogs/: LoginDialog.cpp  LoginDialog.h  RechargeDialog.cpp  RechargeDialog.h  RegisterDialog.cpp  RegisterDialog.h
src/view/panels/: AdminPanel.cpp  AdminPanel.h  StudentPanel.cpp  StudentPanel.h
src/view/widgets/: RecordTableWidget.cpp  RecordTableWidget.h  StatisticsWidget.cpp  StatisticsWidget.h
tests/: CMakeLists.txt  main.cpp
tests/controller/: AuthControllerTest.cpp  CardControllerTest.cpp  MainControllerTest.cpp  RecordControllerTest.cpp
tests/model/: TypesTest.cpp
tests/model/entities/: CardTest.cpp  RecordTest.cpp  UserTest.cpp
tests/model/repositories/: StorageManagerTest.cpp
tests/model/services/: AuthServiceTest.cpp  CardServiceTest.cpp  RecordServiceTest.cpp
tests/view/: MainWindowTest.cpp
tests/view/dialogs/: LoginDialogTest.cpp  RechargeDialogTest.cpp  RegisterDialogTest.cpp
tests/view/panels/: AdminPanelTest.cpp  StudentPanelTest.cpp
tests/view/widgets/: RecordTableWidgetTest.cpp  StatisticsWidgetTest.cpp
